# top-down-shooter

./: .gitignore  README.md
.github/workflows/: push.yml  release.yml
demo/editor/: index.html  main.js
demo/game/: camera.html
editor/: constants.py  file_picker.py  lib.py  main.py  onefile.py  renderer.py  rendering.py  requirements.txt  tileset.py
game/: bullet.py  camera.py  constants.py  enemy.py  lib.py  main.py  pathfinding.py  player.py
lscjh_rendering/: LICENSE.txt  pyproject.toml
lscjh_rendering/src/lscjh_rendering/: __init__.py  lib.py  map.py  renderer.py  tileset.py
multiplayer/server/: Dockerfile  docker-compose.yml  main.py  requirements.txt  tileset-editor-export.json
